--- a/yourPCBuddy/.settings/org.eclipse.wst.common.component
+++ b/yourPCBuddy/.settings/org.eclipse.wst.common.component
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
-    <wb-module deploy-name="yourPCBuddy">
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/" source-path="/src/main/WebContent"/>
-                
-        <property name="context-root" value="yourPCBuddy"/>
-                
-        <property name="java-output-path" value="/yourPCBuddy/build/classes"/>
             
-    </wb-module>
     
+    <wb-module deploy-name="yourPCBuddy">
+                        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                
+        <wb-resource deploy-path="/" source-path="/src/main/WebContent"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/WebContent/Images"/>
+                        
+        
+        <property name="context-root" value="yourPCBuddy"/>
+                        
+        
+        <property name="java-output-path" value="/yourPCBuddy/build/classes"/>
+                    
+    
+    </wb-module>
+        
+
 </project-modules>
