--- a/src/main/WebContent/Styles/AdminProduct.css
+++ b/src/main/WebContent/Styles/AdminProduct.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f0f0f0;
+  background-color: #d0dbdf;
 }
 
 /* Admin navigation styles */
@@ -44,7 +44,7 @@ body {
 
 /* Admin content styles */
 #adminContent {
-  background-color: white;
+  background-color: #d0dbdf;
   padding: 20px;
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -102,6 +102,7 @@ h2 {
   border: 1px solid #ddd;
   border-radius: 25px;
   overflow: hidden;
+  background-color : #f2f2f2;
 }
 
 .search__input {
@@ -111,6 +112,8 @@ h2 {
   box-sizing: border-box;
   outline: none;
   font-size: 16px;
+  background-color : #f2f2f2;
+  
 }
 
 .search__button {
@@ -291,7 +294,8 @@ th {
   color: white;
 }
 
-tr:nth-child(even) {
+tr:nth-child(even), 
+tr:nth-child(odd){
   background-color: #f2f2f2;
 }
 
@@ -302,7 +306,7 @@ tr:hover {
 #updateProduct form, 
 #insertProduct form{
     padding: 10px;
-    background-color: white;
+    background-color: #f2f2f2;
     border: 1px solid #ddd;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
