--- a/src/main/WebContent/Styles/Catalogo.css
+++ b/src/main/WebContent/Styles/Catalogo.css
@@ -1,3 +1,8 @@
+body{
+	  background-color: #d0dbdf;
+		
+}
+
 #filtri {
   display: flex;
   flex : 1 1 20rem;
@@ -8,7 +13,7 @@
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #f9f9f9;
+  background-color: #f2f2f2;
   width: 250px;
   height: 100%;
   float: left;
