--- a/src/main/WebContent/Styles/Header.css
+++ b/src/main/WebContent/Styles/Header.css
@@ -8,8 +8,8 @@ body, h1, h2, p, form, img {
 /* Global Styles */
 body {
   font-family: Arial, sans-serif;
-  background-color: #fff; /* Bianco */
-  color: #333; /* Grigio scuro */
+background-color: #d0dbdf;  
+color: #333; /* Grigio scuro */
   line-height: 1.6;
 }
 
