--- a/src/main/WebContent/Styles/AdminPage.css
+++ b/src/main/WebContent/Styles/AdminPage.css
@@ -9,7 +9,7 @@ body {
   grid-template-rows: 1fr auto 1fr;
   min-height: 100vh;
   background-image: url("../Images/SfondoAdmin.png");
-  background-size: 1200px auto;
+  background-size: 72rem auto;
   position: relative;
   background-repeat: no-repeat;
   background-attachment: fixed;
