--- a/src/main/WebContent/Styles/Index.css
+++ b/src/main/WebContent/Styles/Index.css
@@ -1,3 +1,13 @@
+h2{
+	color : #228CD6;
+}
+
+p{
+	color : #228CD6;
+	font-size: 16px;
+    font-weight: bold
+}
+
 .ultimeAggiunte {
   margin-top: 50px;
   padding: 20px;
