--- a/src/main/WebContent/Styles/LoginScreen.css
+++ b/src/main/WebContent/Styles/LoginScreen.css
@@ -1,3 +1,5 @@
+
+
 main {
   display: flex;
   flex-direction: column;
@@ -20,6 +22,7 @@ main form {
 label {
   margin-bottom: 10px;
   font-weight: bold;
+  color : #228CD6;
 }
 
 input[type="text"],
