--- a/src/main/WebContent/Styles/LoginScreen.css
+++ b/src/main/WebContent/Styles/LoginScreen.css
@@ -11,7 +11,7 @@ main form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 300px;
+  width: 450px;
   margin-bottom: 20px;
   border: 1px solid #ccc;
   padding: 20px;
@@ -43,6 +43,7 @@ input[type="submit"] {
   border-radius: 5px;
   cursor: pointer;
   margin-right: 10px;
+  min-width : -webkit-fill-available;
 }
 
 input[type="submit"]:hover {
